--- a/Evidence1.html/Form.html
+++ b/Evidence1.html/Form.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Form</title>
+    <title>Student Registration Form</title>
 </head>
 <body>
     <h2>Ans No-2</h2>
-    <h2>Registration Form</h2>
     <form action="">
-        ID: <br> <input type="text" placeholder="Enter your ID"><br>
-        Name: <br> <textarea name="" id="" cols="20" rows="5" placeholder="Enter Your Name"></textarea><br>
-        Round: <select name="">
+        ID: <br> <input type="text" placeholder="Enter ID"><br>
+        Name: <br> <textarea name="" id="" cols="25" rows="5" placeholder="Enter Your Name"></textarea><br>
+        Round: <select name="" id="">
             <option value="">Select One</option>
             <option value="50">50</option>
+            <option value="51">51</option>
             <option value="52">52</option>
-            <option value="55">55</option>
-
         </select><br>
-        Gender: Male: <input type="radio" name="Gender" value="M"> Female: <input type="radio" name="Gender"><br>
-        Education: SSC: <input type="checkbox"> HSC: <input type="checkbox"><br>
-        <input type="submit"> <input type="Reset">
+        Gender: Male: <input type="radio" name="Gender" value="m"> Female: <input type="radio" name="Gender" value="f"><br>
+        Education: SSC: <input type="checkbox" name="" id=""> HSC: <input type="checkbox" name="" id=""><br>
+        <input type="submit" name="" id=""> <input type="Reset" name="" id="">
     </form>
 </body>
 </html>
