--- a/Evidence1.html/DIV.html
+++ b/Evidence1.html/DIV.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <h2>Ans No-3</h2>
-    <div style="background-color: yellowgreen; width: 250px; height: 250px; float: left; padding: 10px;">
+    <div style="background-color: aqua; width: 370px; height: 320px; float: left; padding: 10px;">
+        <p style="font-size: 25px;">Menu</p>
         <p><a href="Table.html" target="target">Table</a></p>
         <p><a href="Form.html" target="target">Form</a></p>
 
     </div>
-    <div style="background-color: rgb(205, 95, 40); width: 355px; height: 340px; float: right; padding: 10px;">
-        <iframe src="Table.html" name="target" width="530px" height="345px"></iframe>
-
+    <div style="background-color: orange; width: 420px; height: 320px; float: left; padding: 10px;">
+        <iframe src="Table.html" name="target" width="420px" height="320px"></iframe>
     </div>
 </body>
 </html>
